<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.yaaymina.com.yaaymina.Activity.ManageScheduleScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor">

        <TextView
            android:text="@string/manage_schedule"
            android:id="@+id/textToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    </android.support.v7.widget.Toolbar>


    <RadioGroup
        android:layout_below="@+id/toolbar_main"
        android:id="@+id/schedule_radioGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/left_horizontal_margin">

        <RadioButton
            android:id="@+id/radio_calendar_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_delivary"
            android:textColor="@color/mainColor"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <RadioButton
            android:id="@+id/radio_time_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_delivery"
            android:textColor="@color/mainColor"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <RadioButton
            android:id="@+id/radio_repeatAuto_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_automatically_every"
            android:textColor="@color/mainColor"
            style="@style/TextAppearance.AppCompat.Medium"/>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:id="@+id/contnu_btn"
            android:text="@string/continue_"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />


    </FrameLayout>

</RelativeLayout>
