<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="@dimen/layout_margin">

                <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/firstName_textInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/lastName_textInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/layout_margin">

            <android.support.design.widget.TextInputEditText
            android:id="@+id/addressLine1_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_line_1"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin">

            <android.support.design.widget.TextInputEditText
            android:id="@+id/addressLine2_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_line_2"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="@dimen/layout_margin">

            <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            >

            <android.support.design.widget.TextInputEditText
            android:id="@+id/city_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            >

            <android.support.design.widget.TextInputEditText
            android:id="@+id/houseno_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/builfing_flat_no"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="@dimen/layout_margin">


            <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            >
            <android.support.design.widget.TextInputEditText
            android:id="@+id/pincode_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pincode"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/date_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/scheduled_date"
                        android:inputType="text"
                        android:maxLines="1"
                        android:ellipsize="end"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="text"
                    android:maxLines="1"
                    android:ellipsize="end"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yaaymina_morning_9_am_1_pm"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yaay_mina_afternoon_2_pm_5_pm"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yaay_mina_evening_6_pm_10_pm"/>

            </RadioGroup>
        </LinearLayout>












    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/continue_checkout"
            android:background="@color/mainColor"
            android:textColor="@android:color/white"
            android:text="@string/cotinue_to_checkout"
            />
    </FrameLayout>

</RelativeLayout>