<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/left_horizontal_margin"
        android:layout_marginLeft="@dimen/left_horizontal_margin"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:layout_marginTop="@dimen/left_horizontal_margin"
        android:background="@android:color/darker_gray"/>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/layout_margin"
        android:weightSum="1">


        <ImageView
            android:id="@+id/email_imgVw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.07"
            android:src="@drawable/ic_email" />

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="0.03"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_textInput_forgotPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/mainColor"
                style="@style/TextAppearance.AppCompat.Medium"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        />


    <Button
        android:id="@+id/forgotPwd_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:text="@string/send"
        android:textColor="@android:color/white"/>

</LinearLayout>