<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/progress_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

<android.support.v4.widget.NestedScrollView
    android:id="@+id/nestedScroll"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cartRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:weightSum="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center|bottom|start"
                    android:text="@string/total_amount"
                    style="@style/TextAppearance.AppCompat.Large"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/call_prior_to_delivery"
                    android:gravity="center|start"
                    style="@style/TextAppearance.AppCompat.Medium"/>


            </LinearLayout>

            <TextView
                android:id="@+id/total_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center|end"
                android:text="@string/price"
                android:layout_marginRight="@dimen/layout_margin"
                style="@style/TextAppearance.AppCompat.Large"/>


        </LinearLayout>

        <View
            android:layout_margin="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_margin="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <View
                android:layout_margin="@dimen/layout_margin"
                android:layout_width="0dp"
                android:layout_height="0.2dp"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/place_order_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@drawable/button_press"
                android:text="@string/place_your_order"
                android:textColor="@android:color/white"
                />

            <View
                android:layout_margin="@dimen/layout_margin"
                android:layout_width="0dp"
                android:layout_height="0.2dp"
                android:layout_weight="0.1"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

</RelativeLayout>
