<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin">

                <TextView
                    android:id="@+id/userName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    style="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/address_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="address"
                    android:textColor="@android:color/black"
                    android:ellipsize="end"
                    android:maxLines="1"
                    style="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/phone_textView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/phone"
                    android:textColor="@android:color/black"
                    style="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                android:layout_marginTop="@dimen/layout_margin">

                <View
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/btn_select_address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:gravity="center"
                    android:text="@string/select_address"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:background="@color/mainColor"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="0.05"/>

            </LinearLayout>

        </LinearLayout>


</RelativeLayout>